--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   color: var(--primary-color);
   padding: 0.5rem 5rem;
   border-bottom: 1px solid var(--border-color);
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   z-index: 1;
 }
